# demoMonorepo

./: .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-demoMonorepo  bazel-out  bazel-testlogs  package.json  pnpm-lock.yaml  sonar-project.properties
.github/workflows/: ci.yaml  schedule-workflow.yaml
api/: settings.gradle.kts
api/buildSrc/src/main/kotlin/: buildlogic.java-common-conventions.gradle.kts
api/demo/: build.gradle.kts
api/demo/src/main/java/br/edu/ifpb/esp/demo/: DemoApplication.java
api/demo/src/main/java/br/edu/ifpb/esp/demo/controller/: MessageController.java
api/demo/src/main/java/br/edu/ifpb/esp/demo/domain/: Message.java
api/demo/src/main/java/br/edu/ifpb/esp/demo/repository/: MessageRepository.java
api/demo/src/main/java/br/edu/ifpb/esp/demo/service/: MessageService.java
api/demo/src/main/resources/: application.properties
api/demo/src/test/java/br/edu/ifpb/esp/demo/: DemoApplicationTests.java
api/demo/src/test/java/br/edu/ifpb/esp/demo/service/: MessageServiceTest.java
api/gradle/: libs.versions.toml
apps/backend/message-service/: package.json
apps/backend/message-service/src/: app.service.ts
apps/frontend/next-app/: package.json
apps/frontend/next-app/src/app/: page.tsx
apps/frontend/next-app/src/app/components/: ButtonWrapper.tsx
apps/next-app/: package.json
apps/next-app/src/app/: globals.css
docker/: docker-compose.sonar.yaml  docker-compose.yml  docker_read.md
frontend/: BUILD.bazel
frontend/demo-app/: BUILD.bazel  package.json
frontend/demo-app/public/: BUILD.bazel
frontend/demo-app/src/: BUILD.bazel
